[package]
name = "bytifex-utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.5"
tokio = { version = "1.33", features = ["sync"] }

[dev-dependencies]
closure = "0.3.0"
tokio = { version = "1.33", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
